Removed landing page emoji

--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -57,7 +57,7 @@
       "type": "checkbox",
       "id": "show_badge",
       "label": "Show Badge",
-      "default": true
+      "default": false
     },
     {
       "type": "text",
